# kinase-affinity-baselines

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: dataset_v1.yaml
docs/: data_card.md  project_report.md  revision_plan.md
notebooks/: 01_data_audit.ipynb  02_baseline_results.ipynb  03_error_analysis.ipynb  04_uncertainty_analysis.ipynb  05_case_studies.ipynb
results/: revision_log.txt
results/aminergic_audit/: audit_decision.json  audit_report.md  per_target_audit.csv  run_log.txt
results/supplement_tables/: S1_target_family_assignments.csv  S1_target_level_assignments.csv  S2_hyperparameters.csv  S3_training_compute.csv  S4_endpoint_composition.csv  S5_esm_coverage.csv
results/tables/: bootstrap_confidence_intervals.csv  bootstrap_paired_tests.csv  elasticnet_random_metrics.json  elasticnet_scaffold_metrics.json  elasticnet_target_metrics.json  esm_fp_mlp_random_metrics.json  esm_fp_mlp_scaffold_metrics.json  esm_fp_mlp_target_metrics.json  fusion_random_metrics.json  fusion_scaffold_metrics.json  fusion_target_metrics.json  gnn_random_metrics.json  gnn_scaffold_metrics.json  (+84 more)
scripts/: aws_run_experiments.sh  aws_run_phase5.sh  aws_run_phase7.sh  aws_run_revision.sh  generate_supplement_tables.py  migrate_to_aws.sh  rerun_kinase_v1.py  run_phase6_case_study.py  run_selectivity_baselines.py  validate_kinase_revalidation.py  validate_kinase_revalidation_v2.py
tests/: test_aminergic_targets.py  test_deep_models.py  test_features.py  test_metrics.py  test_models.py  test_splits.py  test_standardize.py  test_uncertainty.py
(+75 files in other folders)
